[gd_scene load_steps=4 format=3 uid="uid://b0khfuv2skth4"]

[ext_resource type="Script" path="res://Scripts/Components/OrganComponent.gd" id="1_eyt8e"]
[ext_resource type="PackedScene" uid="uid://crnqctcrcxgus" path="res://Components/Properties/HealthComponent.tscn" id="2_l6y21"]
[ext_resource type="PackedScene" uid="uid://b5aeg6dptty7b" path="res://Components/Properties/NameComponent.tscn" id="2_w8jum"]

[node name="OrganComponent" type="Node" node_paths=PackedStringArray("health_component")]
script = ExtResource("1_eyt8e")
health_component = NodePath("HealthComponent")

[node name="NameComponent" parent="." instance=ExtResource("2_w8jum")]

[node name="HealthComponent" parent="." instance=ExtResource("2_l6y21")]
